# BayesGNN

./: .gitignore  README.md  pyproject.toml
bayes/model/: GNN_layers.py  network.py
bayes/training/: ivon.py  trainer.py
bayes/utils/: datasets.py  helpers.py  metrics.py  metrics_tracker.py  utils.py
configs/: base.json  base_.json
configs/hyperparam/: config_adam.json  config_ivon.json
configs/training/: base.json
scripts/: automated_experiments.sh  ds_sweep.sh  experiments.py  hyperparam_search.py  hyperparam_search_wandb.py  run_experiments.py
scripts/wandb/sweep-4f8ck8jq/: config-4udrv4i7.yaml  config-6pjl8h4a.yaml  config-fvr7v58y.yaml  config-jgwnnf4a.yaml  config-pnwsflqy.yaml  config-qzwxjji7.yaml  config-tlvogrd9.yaml  config-yitrt30u.yaml
scripts/wandb/sweep-bnc2y68a/: config-23zeebg9.yaml  config-3sjvxmk1.yaml  config-46hzrscl.yaml  config-58ij9oxr.yaml  config-5one3w0r.yaml  config-769snfw1.yaml  config-7d4uiw5m.yaml  config-8f83masg.yaml  config-8ke6a33v.yaml  config-a0x4gmet.yaml  config-a4u5062x.yaml  config-ajyrog6u.yaml  config-co10nw75.yaml  config-fagqd7xg.yaml  config-fnh1kacf.yaml  config-gjlcpcch.yaml  config-gniiqng9.yaml  config-ky9sl7gf.yaml  config-lg0kfrzn.yaml  config-mfnbqp52.yaml  config-o504ewqv.yaml  config-p2042osv.yaml  config-syyfetmw.yaml  config-ujetujyc.yaml  config-v0rgrdey.yaml  config-zclilhef.yaml
scripts/wandb/sweep-e1rxwrm3/: config-0a4sjmer.yaml  config-1odmee36.yaml  config-8usi07ex.yaml  config-a8l0m3wh.yaml  config-fouiogyd.yaml  config-tniposrh.yaml  config-wrlnqw8s.yaml  config-yxqqz07i.yaml
(+1506 files in other folders)
