[tool.poetry]
name = "bayes"
version = "0.1.0"
description = ""
authors = [",me"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.2.1"
torch = "^2.7.0"
torchvision = "^0.22.0"
torch-geometric = "^2.6.1"
matplotlib = "^3.10.3"
ogb = "^1.3.6"
tensorboard = "^2.19.0"
lightning = "^2.5.1.post0"
torchmetrics = "^1.7.1"
transformers = "4.40.2"
optuna = "^4.3.0"
wandb = "^0.19.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
